--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Memory Match</title>
         <meta charset="utf-8">
-        <title></title>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|PT+Sans|Roboto" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
 
