--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-
+        <div class="container">
+            <header>
+                <h1>Memory Match</h1>
+                <div class="scorecard">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>Moves: <span class="moves"></span></p>
+                    <p>Time: <span class="time"></span></p>
+                    <i class="fas fa-redo-alt restart"></i>
+                </div>
+            </header>
+        </div>
     </body>
 </html>
