--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@
                     <i class="fas fa-redo-alt restart"></i>
                 </div>
             </header>
+
+            <ul class="board">
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+            </ul>
         </div>
     </body>
 </html>
