Added the footer section and the css for it

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
                 <li class="card"></li>
                 <li class="card"></li>
             </ul>
+            <footer>
+                <p>Made with <span class="hearts">♥</span> by Ish Tahir</p>
+                <div class="social">
+                    <a href="https://twitter.com/ishtahir"><i class="fab fa-twitter"></i></a>
+                    <a href="mailto:ishtahir@icloud.com"><i class="fas fa-envelope"></i></a>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
