Added the modal div and the css for it

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
                 </div>
             </header>
 
+            <div class="modal">
+                <h2 class="congrats"></h2>
+                <p class="message"></p>
+                <button class="playAgainBtn">Play Again</button>
+            </div>
+
             <ul class="board">
                 <li class="card"></li>
                 <li class="card"></li>
