Removed li's from html & added gameStart function

--- a/index.html
+++ b/index.html
@@ -29,24 +29,7 @@
                 <button class="playAgainBtn">Play Again</button>
             </div>
 
-            <ul class="board">
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
-            </ul>
+            <ul class="board"></ul>
             <footer>
                 <p>Made with <span class="hearts">♥</span> by Ish Tahir</p>
                 <div class="social">
