Added the li's back in html and css for card class

--- a/index.html
+++ b/index.html
@@ -29,7 +29,24 @@
                 <button class="playAgainBtn">Play Again</button>
             </div>
 
-            <ul class="board"></ul>
+            <ul class="board">
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+            </ul>
             <footer>
                 <p>Made with <span class="hearts">♥</span> by Ish Tahir</p>
                 <div class="social">
