--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="modal">
                 <h2 class="congrats"></h2>
-                <p class="message"></p>
+                <p class="stats"></p>
                 <button class="playAgainBtn">Play Again</button>
             </div>
 
