Replaced old modal with a whole new, better modal

--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
             </header>
 
             <div class="modal">
-                <h2 class="congrats"></h2>
-                <p class="stats"></p>
-                <button class="playAgainBtn">Play Again</button>
+                <div class="modal-contents">
+                    <h1 class="congrats"></h1>
+                    <p class="stats"></p>
+                    <button class="playAgainBtn"></button>
+                </div>
             </div>
+            <div class="overlay"></div>
 
             <ul class="board"></ul>
             <footer>
