--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <h1>Memory Match</h1>
                 <div class="scorecard">
                     <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+                        <span class="star-emoji">⭐️</span>
+                        <span class="star-emoji">⭐️</span>
+                        <span class="star-emoji">⭐️</span>
                     </div>
                     <p>Moves: <span class="moves"></span></p>
                     <p>Time: <span class="time"></span></p>
