Updated path to css and js files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|PT+Sans|Roboto"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -51,6 +51,6 @@
         <a href="mailto:ishtahir@icloud.com"><i class="fas fa-envelope"></i></a>
       </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
